<resources>
	<string name="app_name">Crossfit leaderboard</string>

	<string name="registration_wizard_event_title_hint">Название мероприятия</string>
	<string name="registration_wizard_event_date_hint">Дата</string>
	<string name="registration_wizard_event_wod_count_hint">Количество WOD</string>
	<string name="registration_wizard_command_event_hint">Команда</string>
	<string name="registration_wizard_btn_next">Далее</string>
	<string name="registration_wizard_btn_finish">Создать</string>


	<string-array name="wod_count_list">
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
	</string-array>


	<string name="registration_wizard_error_title_empty">Название события не может быть пустым!</string>
	<string name="registration_wizard_error_date_empty">Дата события не может быть пустой!</string>
	<string name="registration_wizard_error">Ошибка!</string>
	<string name="registration_wizard_error_description_empty">Описание не может быть пустым!</string>


	<string name="wod_wizard_title">WOD #%1$d</string>
	<string name="wod_wizard_description">Описание WOD</string>
	<string name="wod_wizard_type">Тип WOD</string>

	<string name="wod_wizard_type_afar">AFAP</string>
	<string name="wod_wizard_type_amrap">AMRAP</string>

	<string name="main_row_result_add">Добавить</string>
	<string name="main_row_result_change">Изменить</string>
	<string name="order_work_action_cancel">Отменить</string>
	<string name="order_work_action_save">Сохранить</string>

</resources>
