<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:id="@id/parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="16dp"
	android:descendantFocusability="beforeDescendants"
	android:focusable="true"
	android:focusableInTouchMode="true"
	android:orientation="vertical">


	<android.support.design.widget.TextInputLayout
		style="@style/RegistrationTextStyle">

		<android.support.v7.widget.AppCompatEditText
			android:id="@+id/registration_wizard_event_title"
			style="@style/RegistrationEditText"
			android:hint="@string/registration_wizard_event_title_hint"
			tools:text="adasdasdads"/>
	</android.support.design.widget.TextInputLayout>


	<android.support.design.widget.TextInputLayout
		style="@style/RegistrationTextStyle">

		<android.support.v7.widget.AppCompatEditText
			android:id="@+id/registration_wizard_event_date"
			style="@style/RegistrationEditText"
			android:focusable="false"
			android:focusableInTouchMode="false"
			android:hint="@string/registration_wizard_event_date_hint"
			tools:text="adasdasdads">

		</android.support.v7.widget.AppCompatEditText>
	</android.support.design.widget.TextInputLayout>

	<TextView
		style="@style/SpinnerHint"
		android:text="@string/registration_wizard_event_wod_count_hint"/>

	<android.support.v7.widget.AppCompatSpinner
		android:id="@+id/registration_wizard_event_wod_count"
		style="@style/Spinner"/>

	<android.support.v7.widget.SwitchCompat
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:enabled="false"
		android:paddingLeft="4dp"
		android:switchPadding="5dp"
		android:text="@string/registration_wizard_command_event_hint"
		android:textAppearance="?android:textAppearance"
		app:switchPadding="10dp"/>

	<android.support.v7.widget.AppCompatButton
		android:id="@+id/registration_wizard_next"
		style="@style/Button_MainAction.RegNext"
		android:text="@string/registration_wizard_btn_next"/>
</LinearLayout>