<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginBottom="2dp"
	android:layout_marginLeft="16dp"
	android:layout_marginRight="16dp"
	android:layout_marginTop="16dp">

	<LinearLayout

		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_margin="16dp"
		android:orientation="vertical">

		<TextView
			android:id="@+id/registration_wizard_wod_number"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
			tools:text="@string/wod_wizard_title"/>

		<android.support.design.widget.TextInputLayout
			style="@style/RegistrationTextStyle">

			<android.support.v7.widget.AppCompatEditText
				android:id="@+id/registration_wizard_wod_description"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/wod_wizard_description"/>
		</android.support.design.widget.TextInputLayout>

		<TextView
			style="@style/SpinnerHint"
			android:text="@string/registration_wizard_event_wod_count_hint"/>

		<android.support.v7.widget.AppCompatSpinner
			android:id="@+id/registration_wizard_wod_type"
			style="@style/Spinner"/>
	</LinearLayout>
</android.support.v7.widget.CardView>
